--- a/requirements.txt
+++ b/requirements.txt
@@ -205,7 +205,7 @@ tensorboard-data-server==0.7.2
 tensorflow==2.15.0
 tensorflow-estimator==2.15.0
 tensorflow-hub==0.15.0
-tensorflow-intel==2.15.0
+tensorflow==2.15.0
 tensorflow-io-gcs-filesystem==0.31.0
 termcolor==3.0.1
 terminado==0.18.1
