--- a/requirements.txt
+++ b/requirements.txt
@@ -75,6 +75,7 @@ google-auth==2.38.0
 google-auth-oauthlib==1.2.1
 google-pasta==0.2.0
 grpcio==1.71.0
+gunicorn
 h11==0.14.0
 h5py==3.13.0
 httpcore==1.0.8
